[tool.poetry]
name = "request-project"
version = "0.1.0"
description = ""
authors = ["Change Me <change.me@gmail.com>"]
readme = "README.md"
packages = [{include = "request_project"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
